--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,13 @@
-version: "3"
+version: '3.7'
 services:
   wolweb:
-    build: .
     image: wolweb:latest
     container_name: wolweb
-    
-    # make sure that the file exists in local directory from where you are running the compose file
-    # Or, initialize empty json file by running command "echo '{}' > devices.json"
-    volumes:
-      - ./devices.json:/wolweb/devices.json
-
-    # Have to use host mode as bridge network has issues with UDP broadcast
-    # https://github.com/docker/for-linux/issues/637
-    # ports:
-    #   - 12345:8089
-    network_mode: host
-
     # Use environment variable below to change port or virtual directory.
     #environment:
       #WOLWEBPORT: "8089"
       #WOLWEBVDIR: "/wolweb"
       #WOLWEBBCASTIP: "192.168.1.255:9"
+    volumes:
+      - /data/wolweb:/wolweb/data # binding required for persistent data
+    network_mode: host # host mode required to support WoL Magic Packets
